# digital-signals-processing

./: Makefile  practica_6.py  pyproject.toml
practicas/: practica_1.py  practica_2.py  practica_3.py  practica_3_1.py  practica_4.py  practica_4_1.py
practicas/__marimo__/: practica_3.html
