[tool.poetry]
name = "practicas"
version = "0.1.0"
description = ""
authors = ["Alessandro Aguilar <alessandro.aguilar.chombo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
marimo = {extras = ["recommended"], version = "^0.9.21"}
numpy = "^2.1.3"
pandas = "^2.2.3"
pydub = "^0.25.1"
matplotlib = "^3.9.3"
scipy = "^1.14.1"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
